--- a/patika/index.html
+++ b/patika/index.html
@@ -8,13 +8,22 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-
+  <nav>
+  <ul style="list-style: none">
+    <li>anasayfa</li>
+    <li>hakkimda</li>
+    <li>iletisim</li>
+  </ul>
+  </nav>
+  <header>
   <h1>hunkar doner</h1>
   <h3>hakkimda</h3>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint porro rerum enim nemo quaerat ex.
   </p>
-
+  </header>
+  
+  <section>
   <h3>ilgi alanlarim</h3>
 
   <ul>
@@ -38,7 +47,9 @@
         <li>Necessitatibus, optio!</li>
       </ol></li>
   </ul>
-
+  </section>
+  <footer>  
   <img src="https://dummyimage.com/600x400/000/fff" alt="dummy img">
+  </footer>
 </body>
 </html>
